--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "strictFunctionTypes": true,
     "strictPropertyInitialization": true,
     "alwaysStrict": true,
-    "lib": ["DOM", "ES2015"]
+    "lib": ["DOM", "ES2015"],
+    "target": "ES2015"
   }
 }
