--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   "license": "MIT",
   "scripts": {
     "build": "tsup src/index.ts --dts --format esm,cjs",
+    "watch:bundle": "tsup src/index.ts --dts --watch",
+    "watch:example": "parcel serve -d example/dist example/index.html",
+    "watch": "run-p watch:*",
     "clean": "rm -rf dist",
     "prepublishOnly": "yarn clean && yarn build"
   },
   "devDependencies": {
     "husky": "^4.3.7",
     "lint-staged": "^10.5.3",
+    "npm-run-all": "^4.1.5",
+    "parcel": "^1.12.4",
     "prettier": "^2.2.1",
     "tsup": "^3.11.0",
     "typescript": "^4.1.3"
