--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hanakla/headless-nprogress",
-  "version": "1.0.0-beta.2",
+  "version": "1.0.0",
   "description": "Headless NProgress package",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
